testing base path config

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Ashley
 description: A Readable & Responsive Theme for Jekyll
 pygments: true
-baseurl: http://jshawl.github.io/ashley-jekyll
 paginate: 5
+BASE_PATH : /ashley-jekyll
